Use Bootstrap framework for web page.

--- a/nginx/content/index.html
+++ b/nginx/content/index.html
@@ -1,5 +1,76 @@
-<html>
-<body>
-<h1>Welcome to Leonia.org!</h1>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Leonia.org</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  </head>
+  <body>
+    <div class="container">
+      <div class="jumbotron">
+	<h1>Welcome to Leonia.org!</h1>
+	<p class="lead">Serving the community of Leonia, New Jersey since 1999.</p>
+      </div>
+      <div class="row">
+	<div class="col-md-2">
+	  <h4>About</h4>
+	  <ul class="list-group">
+	    <li class="list-group-item"><a href="http://www.northjersey.com/towns/leonia">News</a></li>
+	    <li class="list-group-item"><a href="https://en.wikipedia.org/wiki/Leonia,_New_Jersey">Wikipedia</a></li>
+	    <li class="list-group-item"><a href="http://www.yelp.com/leonia-nj-us">Yelp</a></li>
+	  </ul>
+	</div>
+	<div class="col-md-2">
+	  <h4>Government</h4>
+	  <ul class="list-group">
+	    <li class="list-group-item"><a href="http://www.leonianj.gov/">Borough</a></li>
+	    <li class="list-group-item"><a href="http://leoniaboroughnj.iqm2.com/">Meetings</a></li>
+	    <li class="list-group-item"><a href="https://twitter.com/LeoniaPD">@LeoniaPD</a></li>
+	    <li class="list-group-item"><a href="http://www.leoniafire.org/">Fire Dept</a></li>
+	  </ul>
+	</div>
+	<div class="col-md-2">
+	  <h4>Education</h4>
+	  <ul class="list-group">
+	    <li class="list-group-item"><a href="http://www.leoniaschools.org/">Schools</a></li>
+	    <li class="list-group-item"><a href="http://leoniaalumni.org/">Alumni</a></li>
+	  </ul>
+	</div>
+	<div class="col-md-2">
+	  <h4>Community</h4>
+	  <ul class="list-group">
+	    <li class="list-group-item"><a href="http://www.leoniaplayers.org/">Players Guild</a></li>
+	    <li class="list-group-item"><a href="http://leoniasummerstage.org/">SummerStage</a></li>
+	    <li class="list-group-item"><a href="http://www.leoniaarts.org/">Arts</a></li>
+	    <li class="list-group-item"><a href="http://www.sculptureforleonia.org/">Sculpture</a></li>
+	    <li class="list-group-item"><a href="http://www.alpost1.org/">American Legion</a></li>
+	  </ul>
+	</div>
+	<div class="col-md-2">
+	  <h4>Online</h4>
+	  <ul class="list-group">
+	    <li class="list-group-item"><a href="http://welcometoleonia.blogspot.com/">Welcome</a></li>
+	    <li class="list-group-item"><a href="http://leoniatalks.blogspot.com/">Listserv</a></li>
+	    <li class="list-group-item"><a href="https://www.facebook.com/pages/Leonia-New-Jersey/103992469637066">Facebook</a></li>
+	  </ul>
+	</div>
+	<div class="col-md-2">
+	  <h4>Business</h4>
+	  <ul class="list-group">
+	    <li class="list-group-item"><a href="http://leonianj.bonchon.com/">BonChon</a></li>
+	    <li class="list-group-item"><a href="http://www.cvs.com/stores/cvs-pharmacy-address/400+410+Broad+Avenue-Leonia-NJ-07605/storeid=2746">CVS</a></li>
+	    <li class="list-group-item"><a href="http://www.dantesplace.com/">Dante's</a></li>
+	    <li class="list-group-item"><a href="https://pizza.dominos.com/new-jersey/leonia/07605/440-broad-ave/">Domino's</a></li>
+	    <li class="list-group-item"><a href="http://fontanaditrevirestaurant.com/">Fontana di Trevi</a></li>
+	    <li class="list-group-item"><a href="http://marciasandmeyerwilson.com/">Marcia Sandmeyer Wilson</a></li>
+	    <li class="list-group-item"><a href="http://paintstore.benjaminmoore.com/stores/us/nj/leonia/moores-hardware-of-leonia">Moore's</a></li>
+	  </ul>
+	</div>
+      </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  </body>
 </html>
